Fixed CSS issue where product cards are uneven
Also edited Add button CSS

--- a/sevla-design-studio/src/components/Products/AvailableProducts.module.css
+++ b/sevla-design-studio/src/components/Products/AvailableProducts.module.css
@@ -1,6 +1,5 @@
 .products {
   max-width: 60rem;
-  width: 90%;
   margin: 2rem auto;
   animation: meals-appear 1s ease-out forwards;
 }
