--- a/sevla-design-studio/src/components/Products/Items/Item.module.css
+++ b/sevla-design-studio/src/components/Products/Items/Item.module.css
@@ -2,10 +2,12 @@
   margin: 1rem;
   padding-bottom: 1rem;
   border-bottom: 1px solid #ccc;
+  display: inline-block;
 }
 
 .item h3 {
   margin: 0 0 0.25rem 0;
+  padding-bottom: 2px;
 }
 
 .description {
@@ -17,4 +19,9 @@
   font-weight: bold;
   color: #ad5502;
   font-size: 1.25rem;
+}
+
+.image {
+  width: 250px;
+  height: 250px;
 }
