--- a/sevla-design-studio/src/components/StartingPage/StartingPageContent.module.css
+++ b/sevla-design-studio/src/components/StartingPage/StartingPageContent.module.css
@@ -51,3 +51,7 @@
   margin-top: 6px;
   color: black;
 }
+
+.short-desc {
+  font-size: 15px;
+}
